# rustune

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/macos/: Info.plist
docs/superpowers/specs/: 2026-04-02-yewtube-rs-tui-design.md  2026-04-15-bitmap-skin-layout-design.md
src/: app.rs  config.rs  event.rs  main.rs  media.rs  player.rs  skin.rs  theme.rs  youtube.rs
src/extractor/: mod.rs  ytdlp.rs
src/source/: local.rs  mod.rs
src/ui/: help.rs  input.rs  mod.rs  onboarding.rs  player.rs  results.rs  settings.rs  skin_bitmap.rs  skin_browser.rs  skin_layout.rs  winamp.rs
