[package]
name = "rustune"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "macros", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
dirs = "6"
async-trait = "0.1"
zip = { version = "8.5.0", features = ["deflate"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
